NEXT-984 - Fix Smart bar text length when smart bar title it too long

--- a/src/Administration/Resources/administration/src/app/component/sidebar/sw-sidebar-item/sw-sidebar-item.less
+++ b/src/Administration/Resources/administration/src/app/component/sidebar/sw-sidebar-item/sw-sidebar-item.less
@@ -47,5 +47,6 @@
         width: @sw-sidebar-item-width-content;
         height: 100%;
         overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
     }
 }
