--- a/src/Administration/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
+++ b/src/Administration/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
@@ -4,14 +4,22 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr;
-    justify-content: end;
-    overflow: hidden;
+
+    &.has--sidebar {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-template-rows: 1fr;
+        justify-content: end;
+        overflow: hidden;
+
+        .sw-card-view__content {
+            height: initial;
+        }
+    }
 
     .sw-card-view__content {
         width: 100%;
+        height: 100%;
         padding: 40px;
         overflow-x: hidden;
         overflow-y: auto;
